# BitcoinNodeMonitor

./: .env.example  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  mypy.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
bitcoin-monitoring-stack/: .env.example  README.md
bitcoin-monitoring-stack/.github/: PULL_REQUEST_TEMPLATE.md
bitcoin-monitoring-stack/.github/ISSUE_TEMPLATE/: bug.md  feature.md
bitcoin-monitoring-stack/.github/workflows/: ci.yml
bitcoin-monitoring-stack/collector/: Dockerfile
bitcoin-monitoring-stack/collector/collector/: autodetect.py  config.py  main.py  metrics.py
bitcoin-monitoring-stack/collector/tests/: test_config.py
bitcoin-monitoring-stack/docs/: ARCHITECTURE.md  CONFIG.md
bitcoin-monitoring-stack/docs/images/: README.md
bitcoin-monitoring-stack/geoip/: README.md
bitcoin-monitoring-stack/grafana/dashboards/: 03_Mempool_Fees.json  04_Peers_Geo.json
bitcoin-monitoring-stack/influx/: README.md  init.sh
collector/: Dockerfile  pyproject.toml
collector/collector/: __init__.py  autodetect.py  bitcoin_rpc.py  config.py  fulcrum_client.py  geoip.py  influx.py  main.py  metrics.py  process_metrics.py  pydantic_stub.py  zmq_listener.py
collector/tests/: test_bitcoin_rpc.py  test_config.py  test_geoip_integration.py  test_influx.py  test_main.py  test_metrics.py
docs/: ARCHITECTURE.md  CONFIG.md  HARDENING.md  OPERATIONS.md  PORTAINER.md  QUICKSTART.md  TROUBLESHOOTING.md
geoip/: geoipupdate.conf.tmpl
grafana/dashboards/: 01_Overview.json  02_Sync_Health.json  03_Mempool_Fees.json  04_Peers_Geo.json
influx/: init.sh
(+4 files in other folders)
