[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-monitoring-collector"
version = "0.1.0"
description = "Collector for the Bitcoin Monitoring Stack"
authors = [{name = "Bitcoin Monitoring Stack"}]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.4,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "requests>=2.31",
  "tenacity>=8.2",
  "psutil>=5.9",
  "influxdb-client>=1.38",
  "pyzmq>=25.1",
  "geoip2>=4.7"
]

[project.optional-dependencies]
dev = ["mypy>=1.10", "types-requests", "ruff", "pytest"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
